# ChangeLog for sys-kernel/tg-sources
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tg-sources-3.2.9 (05 Mar 2012)

  05 Mar 2012; <thomasg@gentoo.org> +tg-sources-3.2.9.ebuild,
  +tg-sources-3.2.9.ebuild.sig:
  bump to 3.2.9

*tg-sources-3.2.1 (24 Jan 2012)

  24 Jan 2012; <thomasg@gentoo.org> -tg-sources-3.1.1.ebuild,
  -files/ccs-patch-3.1.1-grsecurity-201111201943.diff,
  -files/ccs-patch-3.1.1-grsecurity-201111201943.diff.sig,
  -tg-sources-3.1.1.ebuild.sig, -tg-sources-3.1.4.ebuild,
  -tg-sources-3.1.4.ebuild.sig, +tg-sources-3.2.1.ebuild,
  +tg-sources-3.2.1.ebuild.sig:
  bump to 3.2.1
  this deprecates all old sources

*tg-sources-3.1.4 (04 Dec 2011)

  04 Dec 2011; <thomasg@gentoo.org> +tg-sources-3.1.4.ebuild,
  +tg-sources-3.1.4.ebuild.sig:
  bump to 3.1.4

*tg-sources-3.1.1 (24 Nov 2011)

  24 Nov 2011; <thomasg@gentoo.org> -tg-sources-3.0.4.ebuild,
  -tg-sources-3.0.4-r1.ebuild, -tg-sources-3.0.9.ebuild,
  +tg-sources-3.1.1.ebuild,
  +files/ccs-patch-3.1.1-grsecurity-201111201943.diff,
  +files/ccs-patch-3.1.1-grsecurity-201111201943.diff.sig,
  +tg-sources-3.1.1.ebuild.sig, +metadata.xml:
  bump ebuild to 3.1.1, all old ebuilds have been removed

  this includes signing for patches and ebuilds and addition of a metadata.xml
  file

*tg-sources-3.0.4-r1 (30 Sep 2011)

  30 Sep 2011; <thomas@gstaedtner.net> +tg-sources-3.0.4-r1.ebuild:
  tg-sources-3.0.4-r1.ebuild

  bump ebuild rev, include latest ccs-patch (1.8.3)

*tg-sources-3.0.4 (25 Sep 2011)

  25 Sep 2011; <thomas@gstaedtner.net> +tg-sources-3.0.4.ebuild:
  tg-sources: initial add based on hardened-sources-3.0.4

  tg sources is a package based on gentoo's hardened-sources which
  additionally includes a recent tomoyo patchset (1.8 series).
  It stands for Tomoyo+Grsec/Gentoo sources, or ThomasG-sources,
  as you please :)
