@@ -2,12 +2,15 @@ DIST ccs-patch-1.8.3-20120120.tar.gz 399360 RMD160 66c46a2f6f55ecc21c00a9f3d91e9
 DIST ccs-patch-1.8.3-20120301.tar.gz 399360 RMD160 7566460ec01e6b461f9aa038169adc36ecf810f5 SHA1 3f8ae87d1f6eaef1c5a8f431cf2be237ad14d6ae SHA256 3f569b8b880cf09bdf78ca7183d8abd4d4a20ee8f685a01909953c0665dd5f84
 DIST grsecurity-2.2.2-3.2.1-201201221501.patch 2520333 RMD160 e3ea6a73b41319816f36a360840c7f5410fe4866 SHA1 0d6d8f564f139c37fd4f77b2108f6dd7a1268ce9 SHA256 ae36729a688102e68ae50474c8ceca50c814c66cb7b2b8c60ddfb2b81f92e7be
 DIST grsecurity-2.9-3.2.9-201203022148.patch 2540847 RMD160 890e9800adff61ab7bc70825e1928451ab6a6236 SHA1 32aa13e48679febd3c9346ce44db5089bf341a33 SHA256 8349c819f52b3f8f78f29dccc97e37bcec6a3b17dc031e143eecfafd1d69304c
+DIST grsecurity-2.9-3.2.9-201203051840.patch 2542429 RMD160 39c1fffae53849b20f108b56ec75954651d50987 SHA1 0031e866a763c29bac3d06b88493162ee456e7a3 SHA256 ec06fbd2879b55e02b34e154a887abc8f0f5656c66fa5bb465682eca93386167
 DIST linux-3.2.tar.bz2 78147838 RMD160 15eb022305dfc8b0e1d59e396911fa86eb9c3bdf SHA1 3460afa971049aa79b8f914e1bfd619eedd19f55 SHA256 c881fc2b53cf0da7ca4538aa44623a7de043a41f76fd5d0f51a31f6ed699d463
 DIST patch-3.2.1.bz2 17414 RMD160 6d3f8abea6643ebb663ec51dd2e32c1a91a9315d SHA1 3e6dbebd459f21d03e542f933f2d391281871fd6 SHA256 e9a26dc5faa309ae5172e3c65081fa98b60befab160fb14d9a75816bbde15626
 DIST patch-3.2.9.bz2 159992 RMD160 f09599607fba8e6aac6abbdacecbe7a91ccdf7ba SHA1 f279f2c393942f3b59f655e83f4b91951ddf60da SHA256 7836685dee161a4ffaf887b8e2f8dd3cb7712e690d0942fefb1db09bb6ad3871
 EBUILD tg-sources-3.2.1.ebuild 1937 RMD160 4c53ad0d944b9513c2167f88ef7c8a496bcac12a SHA1 b3407c64a7dbb931c214697cd1ef9b8279655ee0 SHA256 d0e471cb61f7bab6e8676a0a7cb783b6b3bac4779153f91157db6841102b5785
+EBUILD tg-sources-3.2.9-r1.ebuild 1935 RMD160 e271bb1ac695ee49342b3736161adbe0b2f866b5 SHA1 25c3c9089f69e296b78a3ae3d980f57ef8babe3d SHA256 943984f218e1383d5fa11684529dbfbfdcd21125d2cd3479183cec803ccfb077
 EBUILD tg-sources-3.2.9.ebuild 1935 RMD160 85c27c2f7cfb3632522915d2b6781b16e29f220a SHA1 8fda5de5a1736bbae830a48d91380d81bd8b55eb SHA256 46b29e01a07fc772d7e1fd21d6a97f11a14b26785714aa7b20e5e40a0e1cf653
-MISC ChangeLog 1864 RMD160 ea1c5f1a28e261a7971f6998ae8376efa2dfa361 SHA1 64d71ecc8118bcc507920d46912b04d2241c58c3 SHA256 848d4c75453e188a9a53b387d1149c835a9c1161fd7bb2cd926bf0d5ef56c2aa
+MISC ChangeLog 2008 RMD160 5b050a7fdf694db9a63857f17de7f74e23ebb0b9 SHA1 e1617d6d6f9ff91f5508e3c1430485d48a260d45 SHA256 2181e043aaadc9398328dcb3ed208c1c4e7676950d6fd546904493a7d67eb18b
 MISC metadata.xml 892 RMD160 cb78d9dfa83ab66bb265dc349cd24b1833cf43a1 SHA1 1cacb82184ac73455e5c1f002d45e63546231d1a SHA256 cd30b0acbf7b0958a8bfb7ca57ccc399d43f05b6d65acfbeef1623983282b1fe
 MISC tg-sources-3.2.1.ebuild.sig 543 RMD160 4d5c1d61397c050e904bcb8254bc67798eb599a4 SHA1 8f7af9a41b1948f06a2d6bffa9c6bd5d141c7b84 SHA256 bc7ebb7b979a10b33a83e68f5879d9807634a3f77d4fc8b5706ab0d0187f1917
+MISC tg-sources-3.2.9-r1.ebuild.sig 543 RMD160 55bac6afcac2892fbe5f79bd73628b1a170d9cfa SHA1 5d71d842a78b76927a4984cfbc2bd922ffed3e1c SHA256 f775cb3df1d135b271adc681ea9dbdef3d4e45cd2c96c3a03846205179a59b97
 MISC tg-sources-3.2.9.ebuild.sig 543 RMD160 4aa7c070614e1f2830dcbba82304dae15dd48370 SHA1 c749d90f4f077a512cd30b30433e7bbb8bf2911d SHA256 cce1d00e35526e1c5500eab3f16b322d1ca26150c723bb3131427b5f0cc346a2
