@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tg-sources-3.2.9-r1 (06 Mar 2012)
+
+  06 Mar 2012; <thomasg@gentoo.org> +tg-sources-3.2.9-r1.ebuild:
+  same kernel, updated grsec test release
+
 *tg-sources-3.2.9 (05 Mar 2012)
 
   05 Mar 2012; <thomasg@gentoo.org> +tg-sources-3.2.9.ebuild,
